All bugs cleared.

--- a/html/post.html
+++ b/html/post.html
@@ -48,7 +48,7 @@
         </div>
         <div class="comment-part">
             <h4>All Comments</h4>
-            <div class="comment-msg" id="com-msg">
+            <div class="comment-msg" id="myDIV">
                 <p>Good post!</p>
                 <p>Great Post Thanks!</p>
             </div>
