I have made some updates.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ScriBBler Project</title>
-    <link rel="stylesheet" href="../upgrade_project/styles/index.css">
+    <link rel="stylesheet" href="../upgrade_project_scribbler/styles/index.css">
     <link href="https://fonts.googleapis.com/css?family=Montez&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
@@ -77,9 +77,9 @@
                <label for="">Password</label>
                <input type="text" id="email-1" name="email" placeholder="Enter your user password" required>
            </div>
-           <button type="submit"> Sign Up</button>
+           <button type="submit">Sign Up</button>
            <div class="cen">
-            <h4>Not a Member or <span id="switch-button">Sign Up</span></h4>
+            <h4>Not a member? <span id="switch-button">Sign Up</span></h4>
         </div>
         </form>
    </div>
@@ -99,11 +99,11 @@
        <form action="" id="form">
            <div class="input-grp">
                <label>Title</label>
-               <input type="text" id="username-1" name="title" placeholder="Enter your title of your post" required>
+               <input type="text" id="username-1" name="title" placeholder="Enter title of your post" required>
            </div>
            <div class="input-grp">
             <label class="contents">Contents</label>
-            <textarea name="" id="t-area" cols="30" rows="20">Type your post on this place...</textarea>
+            <textarea name="" id="t-area" cols="30" rows="20" placeholder="Enter the contents of your post"></textarea>
            </div>
            <div id="as-bt">
            <button type="submit" id="creat-but"> Create</button>
