--- a/html/postslist.html
+++ b/html/postslist.html
@@ -213,7 +213,7 @@
             </div>
             <button type="submit"> Sign Up</button>
             <div class="cen">
-             <h4>Not a Member or <span id="switch-button">Sign Up</span></h4>
+             <h4>Not a member? <span id="switch-button">Sign Up</span></h4>
          </div>
             </form>
        </div>
